--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@prisma/client": "^6.13.0",
+    "gsap": "^3.13.0",
     "next": "15.4.6",
     "next-auth": "^4.24.11",
     "prisma": "^6.13.0",
