--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "node --loader ts-node/esm prisma/seed.ts"
+  },
   "dependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@gsap/react": "^2.1.2",
     "@prisma/client": "^6.13.0",
     "gsap": "^3.13.0",
@@ -17,6 +21,7 @@
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "ts-node": "^10.9.2",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
